--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     },
     "authors": [
         {
-            "name": "Luiz Kim",
-            "email": "luiz.kim@controleonline.com"
+            "name": "Frete Click",
+            "email": "ti@freteclick.com.br"
         }
     ]
 }
