--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,14 @@
     "require": {
         "guzzlehttp/guzzle": "^7.0"
     },
+	"autoload": {
+        "psr-4": {
+            "SDK\\": "src/SDK"
+        },
+        "classmap": [
+            "SDK.php"
+        ]
+    },	
     "authors": [
         {
             "name": "Luiz Kim",
