--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "freteclick/sdk",
+    "license": "MIT",
     "description": "SDK da plataforma Frete Click",
     "type": "library",
     "require": {
