--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "SDK da plataforma Frete Click",
     "type": "library",
     "require": {
-        "guzzlehttp/guzzle": "^7.2"
+        "guzzlehttp/guzzle": "~5.0"
     },
 	"autoload": {
         "psr-4": {
