--- a/composer.json
+++ b/composer.json
@@ -2,19 +2,19 @@
     "name": "freteclick/sdk",
     "license": "MIT",
     "description": "SDK da plataforma Frete Click",
-    "type": "library",
-    "require": {
-        "guzzlehttp/guzzle": "~5.0"
-    },
-	"autoload": {
-        "psr-4": {
-            "SDK\\": "src/"
-        }
-    },	
+    "type": "library",	
     "authors": [
         {
             "name": "Frete Click",
             "email": "ti@freteclick.com.br"
         }
-    ]
+    ],
+    "require": {
+        "guzzlehttp/guzzle": "~5.0"
+    },
+	"autoload": {
+        "psr-4": {
+            "freteclick\\sdk\\": "src/"
+        }
+    }
 }
