update: added a new configs to marketplaces

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "authors": [
         {
             "name": "Frete Click",
-            "email": "ti@freteclick.com.br"
+            "email": "suporte@freteclick.com.br"
         }
     ],
     "require": {
